[package]
name = "cuts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dfdx_layer = ["dfdx"]
old_stuff_that_didnt_work = []

[dependencies]
dfdx = { version = "0.13.0", optional = true }
faer = "0.18.2"
rand = "0.8.5"
rand_distr = "0.4.3"
tensorboard-writer = { version = "0.2.0", git = "https://github.com/wchargin/rust-tensorboard-writer" }
