[package]
name = "cut-mist"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
experimenting_with_safetensors_view = []
experimenting_with_sparse = []
nightly = ["cuts/nightly"]

[dependencies]
memmap2 = "0.9.4"
safetensors = "0.4.2"
cuts = { version = "0.1.0", path = "../cuts" }
half = "2.4.0"
bytemuck = "1.14.3"
faer = "0.18.2"
rand = "0.8.5"
tensorboard-writer = { version = "0.2.0", git = "https://github.com/wchargin/rust-tensorboard-writer" }
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
rayon = "1.9.0"
candle-core = "0.4.1"
eyre = "0.6.12"
linya = "0.3.0"
equator = "0.2.0"

[[bin]]
name = "assemble_proxy"

[[bin]]
name = "collect_proxies"

[[bin]]
name = "count_shapes"

[[bin]]
name = "hira"

[[bin]]
name = "ls_hira"

[[bin]]
name = "test_mat"

[[bin]]
name = "mat_experiments"

[[bin]]
name = "mat_exp"
