[package]
name = "cuts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dfdx_layer = ["dfdx"]
old_stuff_that_didnt_work = []
nightly = ["pulp/nightly", "faer/nightly"]

[dependencies]
aligned-vec = "0.5.0"
bytemuck = "1.15.0"
dfdx = { version = "0.13.0", optional = true }
dyn-stack = "0.10.0"
equator = "0.2.0"
faer = "0.18.2"
gemm-common = "0.17.1"
pulp = "0.18.9"
rand = "0.8.5"
rand_distr = "0.4.3"
reborrow = "0.5.5"
seq-macro = "0.3.5"
tensorboard-writer = { version = "0.2.0", git = "https://github.com/wchargin/rust-tensorboard-writer" }

[[bench]]
name = "cut_bench"
harness = false

[dev-dependencies]
diol = "0.5.0"
gemm = "0.17.1"
